Uygulama Son Hali

--- a/MovieApp/Views/Category/BilimKurgu.cshtml
+++ b/MovieApp/Views/Category/BilimKurgu.cshtml
@@ -8,9 +8,9 @@
             <div class="row d-flex justify-content-center text-center">
                 <div class="col-lg-8">
                     <h1>BİLİM KURGU</h1>
-                    <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint
-                        voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi
-                        ratione sint. Sit quaerat ipsum dolorem.</p>
+                    <p class="mb-0">Geleceğe, evrene ve bilinmeze doğru bir yolculuk! Bilim kurgunun büyüleyici
+                        dünyasında teknolojik mucizeleri, alternatif gerçeklikleri ve sıra dışı hikayeleri keşfedin.
+                        Hayal gücünüzün sınırlarını zorlayacak bir deneyime hazır olun.</p>
                 </div>
             </div>
         </div>
