--- a/MovieApp/Views/Category/Drama.cshtml
+++ b/MovieApp/Views/Category/Drama.cshtml
@@ -9,9 +9,9 @@
             <div class="row d-flex justify-content-center text-center">
                 <div class="col-lg-8">
                     <h1>DRAM</h1>
-                    <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint
-                        voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi
-                        ratione sint. Sit quaerat ipsum dolorem.</p>
+                    <p class="mb-0">Hayatın en derin duygularını keşfedeceğiniz dram filmleriyle ruhunuza dokunun. İnsan
+                        ilişkileri, mücadeleler ve içsel yolculuklarla dolu bu yapımlar, izleyiciyi hikayenin bir
+                        parçası haline getiriyor.</p>
                 </div>
             </div>
         </div>
