--- a/MovieApp/Views/Category/Korku.cshtml
+++ b/MovieApp/Views/Category/Korku.cshtml
@@ -9,9 +9,10 @@
             <div class="row d-flex justify-content-center text-center">
                 <div class="col-lg-8">
                     <h1>KORKU</h1>
-                    <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint
-                        voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi
-                        ratione sint. Sit quaerat ipsum dolorem.</p>
+                    <p class="mb-0">Cesaretinizi toplayın ve korku dolu dünyalara adım atın! Tüylerinizi diken diken
+                        edecek hikayeler, ürkütücü atmosferler ve beklenmedik anlarla dolu bu filmler, sizi gerilim ve
+                        dehşetin sınırlarında bir yolculuğa çıkaracak. Gözlerinizi kapatmaya cesaret edebilir misiniz?
+                    </p>
                 </div>
             </div>
         </div>
