--- a/MovieApp/Views/Iletisims/Index.cshtml
+++ b/MovieApp/Views/Iletisims/Index.cshtml
@@ -22,7 +22,8 @@
             <!-- Konum Bilgisi -->
             <div class="col-lg-4">
                 <div class="info-item d-flex align-items-center">
-                    <i class="bi bi-geo-alt flex-shrink-0" id="location-icon" style="cursor: pointer;"></i>
+                    <i class="bi bi-geo-alt flex-shrink-0" id="location-icon"
+                        style="cursor: pointer;"></i>
                     <div class="ms-3">
                         <h3>KONUM</h3>
                         <p>İstanbul, Nişantaşı Üniversitesi, Acunmedya Akademi</p>
@@ -31,7 +32,7 @@
             </div>
 
             <!-- Telefon Bilgisi -->
-            <div class="col-lg-4">
+            <div class="col-lg-4" style="">
                 <div class="info-item d-flex align-items-center">
                     <i class="bi bi-telephone flex-shrink-0"></i>
                     <div>
@@ -87,7 +88,7 @@
 
 <div class="modal fade" id="locationModal" tabindex="-1" aria-labelledby="locationModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content" style="background-color: #4f4f4f; color: white;">
+        <div class="modal-content" style="background-color: black; color: white; border: 1px solid white;">
             <div class="modal-header">
                 <h5 class="modal-title" id="locationModalLabel">Konum</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
