--- a/MovieApp/Views/Category/Komedi.cshtml
+++ b/MovieApp/Views/Category/Komedi.cshtml
@@ -8,9 +8,9 @@
             <div class="row d-flex justify-content-center text-center">
                 <div class="col-lg-8">
                     <h1>KOMEDİ</h1>
-                    <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint
-                        voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi
-                        ratione sint. Sit quaerat ipsum dolorem.</p>
+                    <p class="mb-0">Gülmeye doyamayacağınız komedi filmleriyle tanışın! Eğlenceli hikayeler, absürt
+                        karakterler ve zekice esprilerle dolu bu filmler, sizi günün stresinden uzaklaştırıp yüzünüzde
+                        kocaman bir tebessüm bırakacak.</p>
                 </div>
             </div>
         </div>
